Working version for jar as well as IDE files access, using 2 different protocols